# ntsuite

./: Cargo.toml  README.md
generator/: Cargo.toml
generator/src/: categorizer.rs  code_generator.rs  main.rs  pdb_extractor.rs  pe_parser.rs  types.rs
generator/src/data/: mod.rs  v10_0_26100_8521.rs
ntalloc/: Cargo.toml
ntalloc/examples/: ntalloc.rs
ntalloc/src/: lib.rs  nt_allocator.rs  rtl_allocator.rs
ntapi/: Cargo.toml
ntapi/examples/: console_write.rs  create_process.rs  create_thread.rs  paths.rs  query_dos_device.rs  scan_process_memory.rs
ntapi/src/: evntrace.rs  lib.rs  mapped_file_iter.rs  ntdbg.rs  ntdef.rs  ntexapi.rs  ntioapi.rs  ntkeapi.rs  ntlpcapi.rs  ntmisc.rs  ntmmapi.rs  ntobapi.rs  ntpebteb.rs  ntpnpapi.rs  ntpoapi.rs  ntpsapi.rs  ntregapi.rs  ntrtl.rs  ntseapi.rs  ntstatus.rs  nttmapi.rs  ntwmi.rs  ntzwapi.rs
nthook/: Cargo.toml
nthook/examples/: current_process.rs
nthook/src/: api.rs  lib.rs
ntsyscalls/: Cargo.toml
ntsyscalls/examples/: read_memory.rs
ntsyscalls/src/: lib.rs  v10_0_26100_8521.rs
tools/: Cargo.toml
tools/src/: a_stack_string.rs  environment.rs  lib.rs  mapped_file_iter.rs  nt_console.rs  ps_attribute.rs  stack_string.rs
