[package]
name = "generator"
version = "0.1.0"
authors = ["Jozef Podlecki"]
edition = "2024"
rust-version = "1.95"
license = "MIT"

[dependencies]
tokio = { version = "1.52.0", features = ["full"] }
flexi_logger = "0.31.8"
log = "0.4.18"
anyhow = "1.0.100"
pelite = "0.10.0"
iced-x86 = "1.21.0"
symsrv = "0.5.3"
pdb = "=0.8.0"
codegen = "0.3.0"