[package]
name = "ntapi"
version = "0.1.0"
authors = ["Jozef Podlecki"]
edition = "2024"
rust-version = "1.95"
license = "MIT"
repository = "https://github.com/Jozefpodlecki/ntsuite"

[features]
default = ["full"]
full = ["ntobapi", "ntkeapi", "ntgdi", "ntafd", "ntbcd", "ntd3dkmt", "ntdbg", "ntexapi", "ntimage", "ntintsafe", "ntioapi", "ntldr", "ntlpcapi", "ntmisc", "ntmmapi", "ntnls", "ntpebteb", "ntpfapi", "ntpnpapi", "ntpoapi", "ntpsapi", "ntregapi", "ntrtl", "ntsam", "ntseapi", "ntzwapi", "ntxcapi", "ntwow64", "winsta", "smbios", "subprocesstag", "ntstrsafe", "ntsxs", "nttp", "nttmapi", "nttypesafe", "ntuser", "ntwmi", "phnt_ntdef", "phnt_windows", "phnt", "usermgr"]

ntobapi = []
ntkeapi = []
ntgdi = []
ntafd = []
ntbcd = []
ntd3dkmt = []
ntdbg = []
ntexapi = []
ntimage = []
ntintsafe = []
ntioapi = []
ntldr = []
ntlpcapi = []
ntmisc = []
ntmmapi = []
ntnls = []
ntpebteb = []
ntpfapi = []
ntpnpapi = []
ntpoapi = []
ntpsapi = []
ntregapi = []
ntrtl = []
ntsam = []
ntseapi = []
ntzwapi = []
ntxcapi = []
ntwow64 = []
winsta = []
smbios = []
subprocesstag = []
ntstrsafe = []
ntsxs = []
nttp = []
nttmapi = []
nttypesafe = []
ntuser = []
ntwmi = []
phnt_ntdef = []
phnt_windows = []
phnt = []
usermgr = []