[package]
name = "nthook"
version = "0.1.0"
authors = ["Jozef Podlecki"]
edition = "2024"
rust-version = "1.95"
license = "MIT"
# repository = "https://github.com/Jozefpodlecki/nthook"

[dependencies]
ntapi = { path = "../ntapi", features = ["ntmmapi"] }
anyhow = { version = "1.0.102", default-features = false }
pelite = "0.10.0"
tools = { path = "../tools", features = [] }